# Skillbox

./: CMakeLists.txt  README.md  Task_32_5_1.cpp  Task_32_5_1.h
